--- a/SRteacher/Content/scss/mend/_nav-tabs.scss
+++ b/SRteacher/Content/scss/mend/_nav-tabs.scss
@@ -1,5 +1,5 @@
 .nav-tabs{
-    background-color: $view-body-color;
+    background-color: $body-bg;
 	--bs-nav-tabs-border-color: transparent;
     .nav-item{
         .nav-link{
