--- a/SRteacher/Content/scss/modules/_myStudy.scss
+++ b/SRteacher/Content/scss/modules/_myStudy.scss
@@ -37,7 +37,7 @@
 .myStudy{
 	font-size: .8rem;
 	color: $gray-800;
-	background-color: $view-body-color;
+	background-color: $body-bg;
 	padding: .5rem 0;
 	.myStudy-block{ 
 		background-color: #FFF;
