--- a/SRteacher/Content/scss/master/_main.scss
+++ b/SRteacher/Content/scss/master/_main.scss
@@ -1,5 +1,5 @@
 main{
-    border: 1rem solid $view-body-color;
+    border: 1rem solid $body-bg;
     background-color: $white;
     @media screen and (min-width: 1200px) {
     border-right: none;
@@ -7,7 +7,7 @@ main{
     }
     
     > h2{
-        background-color: $view-body-color;
+        background-color: $body-bg;
         text-align: center;
         font-size: 1.1rem;
         padding-bottom: 1rem;
