--- a/SRteacher/Content/scss/mend/_forms.scss
+++ b/SRteacher/Content/scss/mend/_forms.scss
@@ -81,13 +81,54 @@ input:-internal-autofill-selected {
   	background-color: $green-200;
 }
 
-.form-check {
-    padding-left: 0;
-    margin-bottom: 0;
-    .form-check-input {
-        margin-left: 0;
-        margin-right: .5rem;
-    }
+.form-check:not(.form-switch) {
+	padding-left: 0;
+	margin-bottom: 0;
+	.form-check-input {
+		margin-left: 0;
+		margin-right: .5rem;
+	}
+	.form-check-input[type="checkbox"]{
+		border-color: $form-check-input-active-color; 
+		&:checked{
+			--bs-form-check-bg-image: none;
+			position: relative;	
+			&::after{ 
+				content: "";
+				display: block;
+				width: 130%;
+				height: 130%;
+				position: absolute;
+				top: -3px;
+				left: -1px;
+				background-position: center center;
+						background-size: cover;
+				background-repeat: no-repeat;
+				background-image: escape-svg(url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='#{$form-check-input-checked-color}' class='bi bi-check-lg' viewBox='0 0 16 16'%3E %3Cpath d='M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425z'/%3E %3C/svg%3E"));
+				filter: drop-shadow( 1px  1px white)
+					drop-shadow(-1px -1px white)
+					drop-shadow(-1px  1px white)
+					drop-shadow( 1px -1px white);
+				}	
+		}
+	}
+	
+	&.form-check-red{
+		.form-check-input[type="checkbox"]{
+			border-color: $red;
+			&:focus{
+				box-shadow: 0 0 $focus-ring-blur $focus-ring-width rgba($red, $focus-ring-opacity);
+			}
+			&:checked{
+				&::after{ 
+					background-image: escape-svg(url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='#{$red}' class='bi bi-check-lg' viewBox='0 0 16 16'%3E %3Cpath d='M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425z'/%3E %3C/svg%3E"));
+				}
+			}
+			&:indeterminate{
+				background-image: escape-svg(url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='#{$red}' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='M6 10h8'/%3e%3c/svg%3e"));
+			}
+		}
+	}
 }
 .form-check-inline{
 	float: left;
