--- a/SRteacher/Content/scss/modules/_table-RPList.scss
+++ b/SRteacher/Content/scss/modules/_table-RPList.scss
@@ -1,35 +1,34 @@
 //202501 修改SmartReading  _RPList-books__table 給 SR教師端用
-
-.table-RPList{
-	$left-bolck-width: 40%;
-	$right-bolck-width: calc(100% - #{$left-bolck-width} - .5rem*2 - 2px);
-	margin-bottom: 0;
-	>thead{
-		display:none;
-	}
-	>tbody{ 
-		>tr{  
+.table-RPList {
+  $left-bolck-width: 40%;
+  $right-bolck-width: calc(100% - #{$left-bolck-width} - .5rem*2 - 2px);
+  margin-bottom: 0;
+  > thead {
+    display: none;
+  }
+  > tbody {
+		> tr {
 			position: relative;
 			margin-top: .5rem;
 			margin-bottom: .5rem;
 			display: inline-block;
-			background-color: $white !important;  
+			background-color: $white !important;
 			vertical-align: middle;
 			border: 1px solid $border-color;
-			>td{ 
+			> td {
 				display: inline-block;
 				float: left;
 				table-layout: fixed;
-				white-space: nowrap; 
+				white-space: nowrap;
 				text-overflow: ellipsis;
 				overflow: hidden;
 				position: relative;
 				min-height: auto;
 				height: auto;
-				&.row-id{ 
-					display:none;
+				&.book-id, &.row-id, &.col-id {
+					display: none;
 				}
-				&.row-index{ 
+				&.bookbook-index, &.row-index, &.col-index {
 					position: absolute;
 					top: 0;
 					right: 0;
@@ -39,7 +38,7 @@
 					text-align: right;
 					padding: 0;
 					background-color: transparent;
-					&::before, &::after{
+					&::before, &::after {
 						content: "";
 						display: block;
 						width: 0;
@@ -51,14 +50,14 @@
 						right: 0;
 						z-index: 1;
 					}
-					&::before{
-						border-color: $border-color transparent transparent;  
+					&::before {
+						border-color: $border-color transparent transparent;
 					}
-					&::after{
+					&::after {
 						border-color: $body-bg transparent transparent;
 						transform: translate(1px, -1px);
 					}
-					.index-text{  
+					.index-text {
 						position: relative;
 						z-index: 2;
 						min-width: 1rem;
@@ -66,16 +65,16 @@
 						text-align: center;
 					}
 				}
-				&.row-good{
+				&.book-good, &.row-good, &.col-good {
 					background-color: transparent;
 					position: absolute;
 					z-index: 5;
 					top: .5rem;
 					left: calc(40% + 2px);
-					transform: translate( calc(-100% + .5rem + 7px), -6px);
+					transform: translate(calc(-100% + .5rem + 7px), -6px);
 					padding: 0;
 				}
-				&.row-cover{ 
+				&.book-front, &.row-cover, &.col-cover {
 					width: $left-bolck-width;
 					height: 0;
 					margin: .5rem;
@@ -83,21 +82,21 @@
 					padding-bottom: calc(40% * (222/212));
 					text-align: center;
 					border: 1px solid $border-color;
-					>a{ 
-						display:block;
+					> a {
+						display: block;
 					}
-					img{ 
-						width:100%;
-						height:auto;
+					img {
+						width: 100%;
+						height: auto;
 					}
 				}
-				&.row-bookTitle{
+				&.book-name, &.row-bookTitle, &.col-bookTitle {
 					max-width: calc(#{$right-bolck-width} - .5rem*2 - 30px - 2.5rem/2);
 					font-size: 1rem;
 					font-weight: 500;
 					padding: 1rem .5rem .5rem .5rem;
 				}
-				&.row-ebook{ 
+				&.book-ebook, &.row-ebook, &.col-ebook {
 					width: 30px;
 					max-width: 30px;
 					height: calc(1rem*1.5);
@@ -106,23 +105,23 @@
 					align-items: center;
 					justify-content: center;
 				}
-				&.row-SR, &.row-sort{  
+				&.book-SR, &.book-sort, &.row-SR, &.row-sort &.col-SR, &.col-sort {
 					width: calc(#{$right-bolck-width} - .5rem*2);
 					font-size: .8rem;
-					color:  $gray-800;
+					color: $gray-800;
 					text-align: left;
 					padding: .125rem .5rem;
 					&::before {
 						content: attr(data-th) " : ";
 					}
 				}
-				&.row-readingDate{ 
+				&.book-date, &.row-readingDate, &.col-readingDate {
 					width: calc(#{$right-bolck-width} - .5rem - .5rem*2);
 					background-color: $gray-100;
 					padding: .5rem .5rem;
 					margin-top: .5rem;
 					margin-right: .5rem;
-					.readingDate-start, .readingDate-end{
+					.readingDate-start, .readingDate-end {
 						display: inline-block;
 						float: left;
 						font-size: .8rem;
@@ -132,7 +131,7 @@
 						overflow: hidden;
 						text-align: center;
 						width: calc(50% - 5px);
-						.readingDate-title{
+						.readingDate-title {
 							background-color: $primary;
 							border-bottom: 1px solid $primary;
 							text-align: center;
@@ -140,21 +139,21 @@
 							padding: .25rem 0;
 							//border-radius: .25rem .25rem 0 0;
 						}
-						.readingDate-content{
+						.readingDate-content {
 							background-color: $white;
 							text-align: center;
 							padding: .5rem;
 							//border-radius:0 0 .25rem  .25rem ;
 						}
 					}
-					.readingDate-start{
+					.readingDate-start {
 						margin-right: .25rem;
 					}
-					.readingDate-end{
+					.readingDate-end {
 						margin-left: .25rem;
 					}
 				}
-				&.row-tool{ 
+				&.book-tools, &.row-tool, &.col-tool {
 					width: 100%;
 					overflow: visible;
 					vertical-align: middle;
@@ -164,107 +163,99 @@
 					/*@media screen and (min-width: 576px) {
 					height:95px;	
 					}*/
-					.tool-add{
-						.RPbookList-table__btn-add{
-							font-size:16px;
-							min-width:55%;
-							padding:7px 12px;
-							margin:28px 0;
+					.tool-add {
+						.RPbookList-table__btn-add {
+							font-size: 16px;
+							min-width: 55%;
+							padding: 7px 12px;
+							margin: 28px 0;
 						}
 					}
-					.popover{
+					.popover {
 						min-width: 184px;
-						.popover-content{
+						.popover-content {
 							color: $red;
-							font-weight:400;
-							font-size:16px;
-							text-align:center;
+							font-weight: 400;
+							font-size: 16px;
+							text-align: center;
 						}
 					}
-					.tool-evaluation{
+					.tool-evaluation {
 						color: $gray-800;
-						text-align:center;
-						>.row{
+						text-align: center;
+						> .row {
 							margin-right: 0px;
-    						margin-left: 0px;
-							>div{
-								padding-left:0;
-								padding-right:0;
+							margin-left: 0px;
+							> div {
+								padding-left: 0;
+								padding-right: 0;
 								@media screen and (min-width: 576px) {
-								width:25%;
+									width: 25%;
 								}
 							}
 						}
-						.tool-title{
+						.tool-title {
 							font-size: .8rem;
 							padding: 6px 0;
-							background-color:#f3f3f3;
-                            min-height: calc(1em*1.42857143 + 6px*2); 
+							background-color: #f3f3f3;
+							min-height: calc(1em*1.42857143 + 6px*2);
 						}
-						.tool-content{
-							height:59px;
+						.tool-content {
+							height: 59px;
 							display: flex;
-							align-items: center; 
+							align-items: center;
 							justify-content: center;
-							.userScore{
-								margin:12px auto;
+							.userScore {
+								margin: 12px auto;
 							}
 						}
-						
 					}
 				}
 			}
 		}
-		/*set width&height*/
-		tr{ 
-			width:calc(100vw - 17px - 30px);
-			height:auto;		
-			td.book-front{ height:calc((100vw - 17px - 30px)/2); }
-		}
-		@media screen and (min-width: 576px) {
-		tr{ 
-			width:100%;
-			/*height:211px + 10px + 95px + 1px; /*54+24+5+24+5+99*/	
-            height:auto;
-			td.book-front{ height:211px; }
-		}	
-		}
-		@media screen and (min-width: 768px) {
-		tr{ 
-			width:100%;
-			/*height:211px + 10px + 95px + 1px;	 /*54+24+5+24+5+99*/
-            height:auto;
-			td.book-front{ height:211px; }
-		}	
-		}
-		@media screen and (min-width: 992px) {
-		tr{ 
-			width:calc(50% - 10px);
-			/*height:201px + 10px + 95px + 1px; /*54+24+5+24+5+89*/
-            height:auto;
-			td.book-front{ height:201px; }
-			&:nth-child(odd){margin-right:10px;}
-			&:nth-child(even){margin-left:10px;}
-		}	
-		}
-		@media screen and (min-width: 1200px) {
-		tr{ 
-			width:calc(50% - 10px);
-			/*height:211px + 10px + 95px + 1px ;	 /*54+24+5+24+5+99*/
-            height:auto;
-			td.book-front{ height:211px; }
-		}	
-		}
-        
-        >tr.ungradedBook{ 
+		> tr.ungradedBook {
 			background-color: #f9f9f9 !important;
-            >td{
-                &.book-SR{
+			> td {
+				&.book-SR, &.row-SR, &.col-SR {
 					&::before {
 						opacity: 0;
 					}
 				}
-            }
-        }
-	}	
+			}
+		}
+
+    /*set width&height*/
+    tr {
+      width: calc(100vw - 17px - 30px);
+      height: auto;
+    }
+    @media screen and (min-width: 576px) {
+		tr {
+			width: 100%;
+		}
+    }
+    @media screen and (min-width: 768px) {
+		tr {
+			width: 100%;
+		}
+    }
+    @media screen and (min-width: 992px) {
+		tr {
+			width: calc(50% - 10px);
+			&:nth-child(odd) {
+				margin-right: 10px;
+			}
+			&:nth-child(even) {
+				margin-left: 10px;
+			}
+		}
+    }
+    @media screen and (min-width: 1200px) {
+		tr {
+			width: calc(50% - 10px);
+		}
+    }
+
+    
+  }
 }
