--- a/SRteacher/Content/scss/SRv3-manager.scss
+++ b/SRteacher/Content/scss/SRv3-manager.scss
@@ -21,8 +21,8 @@
 @import "mend/modal";
 @import "mend/nav-tabs";
 @import "mend/popover";
+@import "mend/table";
 @import "mend/ui";
-
 
 @import "modules/DACCicon";
 @import "modules/scrollbar";
@@ -30,7 +30,6 @@
 @import "modules/SRform";
 @import "modules/SRicons";
 @import "modules/SRrange-bar";
-@import "modules/SRtable";
 @import "modules/userScore";
 @import "modules/table-recommendedBook";
 @import "modules/table-RPList";
